--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>Colfhales Þifiles</h1>
   </header>
   <main>
-    
+    <h2>このサイトについて</h2>
+    <p>このサイトは、私Nihilの作成した人工言語や架空世界を紹介しています。</p>
   </main>
   <footer>
   </footer>
