--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <title>COLFHALES FHIHILES</title>
 </head>
 <body>
   <header>
-    <h1>Colfhales Þifiles</h1>
   </header>
   <main>
+    <h1>Colfhales Þifiles</h1>
     <h2>このサイトについて</h2>
     <p>このサイトは、私Nihilの作成した人工言語や架空世界を紹介しています。</p>
+    <h2>人工言語</h2>
+    <h2>架空世界コルサレス</h2>
   </main>
   <footer>
   </footer>
