--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>COLFHALES FHIHILES</title>
+  <title>COLFHALES ÞIHILES</title>
 </head>
 <body>
   <header>
+    <h1 class="headline">
+      <a>Colfhales Þifiles</a>
+    </h1>
+    <ul class="nav-list">
+      <li class="nav-list-item"><a>ホーム</a></li>
+      <li class="nav-list-item"><a>人工言語</a></li>
+      <li class="nav-list-item"><a>架空世界</a></li>
+      <li class="nav-list-item"><a>架空史</a></li>
+    </ul>
   </header>
   <main>
-    <h1>Colfhales Þifiles</h1>
+    
     <h2>このサイトについて</h2>
     <p>このサイトは、私Nihilの作成した人工言語や架空世界を紹介しています。</p>
     <h2>人工言語</h2>
