--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     </ul>
   </header>
   <main>
-    
     <h2>このサイトについて</h2>
     <p>このサイトは、私Nihilの作成した人工言語や架空世界を紹介しています。</p>
     <h2>人工言語</h2>
+    <ul>
+      <li>ネサルゼルデ語</li>
+    </ul>
     <h2>架空世界コルサレス</h2>
   </main>
   <footer>
