--- a/conlang/nefhalzerde.html
+++ b/conlang/nefhalzerde.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
-  <title>COLFHALES ÞIHILES</title>
+  <link rel="stylesheet" href="../style.css">
+  <title>ネサルゼルデ語</title>
 </head>
 <body>
   <header>
@@ -19,8 +19,8 @@
   </header>
   <main>
     <h2>ネサルゼルデ語</h2>
-    <p>2020年11月から制作中の人工言語。</p>
-    <h2>文法書</h2>
+    <p>2020年11月から制作中の人工言語。難解な言語を目指して制作されており、非常に煩雑な語形変化を有することが特徴的。</p>
+    <h2>文法</h2>
     <h2>バージョン</h2>
   </main>
   <footer>
