--- a/conlang/nefhalzerde/index.html
+++ b/conlang/nefhalzerde/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../style.css">
-  <title>ネサルゼルデ語</title>
+  <title>ネサルゼルデ語 - COLFHALES ÞIHILES</title>
 </head>
 <body>
   <header>
@@ -12,9 +12,9 @@
     </h1>
     <ul class="nav-list">
       <li class="nav-list-item"><a>ホーム</a></li>
-      <li class="nav-list-item"><a>人工言語</a></li>
-      <li class="nav-list-item"><a>架空世界</a></li>
-      <li class="nav-list-item"><a>架空史</a></li>
+      <li class="nav-list-item"><a>文法</a></li>
+      <li class="nav-list-item"><a>例文</a></li>
+      <li class="nav-list-item"><a>辞書</a></li>
     </ul>
   </header>
   <main>
