--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>COLFHALES ÞIHILES</title>
+  <title>COLÞALES ÞIHILES</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
   <header>
     <h1 class="headline">
-      <a>Colfhales Þifiles</a>
+      <a>Colþales Þifiles</a>
     </h1>
     <ul class="nav-list">
       <li class="nav-list-item"><a>ホーム</a></li>
-      <li class="nav-list-item"><a>人工言語</a></li>
-      <li class="nav-list-item"><a>架空世界</a></li>
-      <li class="nav-list-item"><a>架空史</a></li>
+      <li class="nav-list-item"><a href="/conlang/index.html">人工言語</a></li>
+      <li class="nav-list-item"><a href="/fictional_world/index.html">架空世界</a></li>
+      <li class="nav-list-item"><a href="/cipher/index.html">暗号</a></li>
+      <li class="nav-list-item"><a href="/contact/index.html">お問い合わせ</a></li>
     </ul>
   </header>
   <main>
@@ -25,7 +26,10 @@
     <ul>
       <li>ネサルゼルデ語</li>
     </ul>
-    <h2>架空世界コルサレス</h2>
+    <h2>架空世界</h2>
+    <ul>
+      <li>架空世界コルサレス</li>
+    </ul>
   </main>
   <footer>
   </footer>
