--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a>Colþales Þifiles</a>
     </h1>
     <ul class="nav-list">
-      <li class="nav-list-item"><a>ホーム</a></li>
+      <li class="nav-list-item"><a href="index.html">ホーム</a></li>
       <li class="nav-list-item"><a href="/conlang/index.html">人工言語</a></li>
       <li class="nav-list-item"><a href="/fictional_world/index.html">架空世界</a></li>
       <li class="nav-list-item"><a href="/cipher/index.html">暗号</a></li>
