--- a/index.html
+++ b/index.html
@@ -4,20 +4,12 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>COLÞALES ÞIHILES</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="jquery.js"></script>
 </head>
 <body>
-  <header>
-    <h1 class="headline">
-      <a>Colþales Þifiles</a>
-    </h1>
-    <ul class="nav-list">
-      <li class="nav-list-item"><a href="index.html">ホーム</a></li>
-      <li class="nav-list-item"><a href="/conlang/index.html">人工言語</a></li>
-      <li class="nav-list-item"><a href="/fictional_world/index.html">架空世界</a></li>
-      <li class="nav-list-item"><a href="/cipher/index.html">暗号</a></li>
-      <li class="nav-list-item"><a href="/contact/index.html">お問い合わせ</a></li>
-    </ul>
+  <header id="header">
+    <script>header('../');</script>
   </header>
   <main>
     <h2>このサイトについて</h2>
@@ -31,7 +23,7 @@
       <li>架空世界コルサレス</li>
     </ul>
   </main>
-  <footer>
+  <footer id="footer">
   </footer>
 </body>
 </html>
