--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header id="header">
-    <script>header('../');</script>
+    <script type="text/javascript">header('../');</script>
   </header>
   <main>
     <h2>このサイトについて</h2>
