--- a/conlang/index.html
+++ b/conlang/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <title>人工言語 - COLÞALES ÞIHILES</title>
-  <script type="text/javascript" src="main.js"></script>
-  <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="../main.js"></script>
+  <script type="text/javascript" src="../jquery.js"></script>
 </head>
 <body>
   <header id="header">
