--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <p>このサイトは、私Nihilの作成した人工言語や架空世界を紹介しています。</p>
     <h2>人工言語</h2>
     <ul>
-      <li>ネサルゼルデ語</li>
+      <li><a href="conlang/nefhalzerde/index.html">ネサルゼルデ語</a></li>
     </ul>
     <h2>架空世界</h2>
     <ul>
       <li>架空世界コルサレス</li>
+    </ul>
+    <h2>暗号</h2>
+    <ul>
+      <li>漢字式暗号「素性漢字」</li>
     </ul>
   </main>
   <footer id="footer">
