--- a/conlang/nefhalzerde/index.html
+++ b/conlang/nefhalzerde/index.html
@@ -19,8 +19,9 @@
   </header>
   <main>
     <h2>ネサルゼルデ語</h2>
-    <p>2020年11月から制作中の人工言語。難解な言語を目指して制作されており、非常に煩雑な語形変化を有することが特徴的。</p>
+    <p>2020年11月から制作中の人工言語。難解な言語を目指して制作されており、非常に煩雑な語形変化を有することを特徴としている。</p>
     <h2>文法</h2>
+    <p><a href="grammar/index.html"></a></p>
     <h2>バージョン</h2>
   </main>
   <footer>
