--- a/header.html
+++ b/header.html
@@ -1,6 +1,4 @@
-<h1 class="headline">
-  <a>Colþales Þifiles</a>
-</h1>
+<h1 class="headline">Colþales Þifiles</h1>
 <ul class="nav-list">
   <li class="nav-list-item"><a href="{$root}index.html">ホーム</a></li>
   <li class="nav-list-item"><a href="{$root}/conlang/index.html">人工言語</a></li>
