--- a/conlang/nefhalzerde/index.html
+++ b/conlang/nefhalzerde/index.html
@@ -2,20 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>ネサルゼルデ語 - COLFHALES ÞIHILES</title>
+  <script type="text/javascript" src="../../main.js"></script>
+  <script type="text/javascript" src="../../jquery.js"></script>
 </head>
 <body>
-  <header>
-    <h1 class="headline">
-      <a>ネサルゼルデ語</a>
-    </h1>
-    <ul class="nav-list">
-      <li class="nav-list-item"><a>ホーム</a></li>
-      <li class="nav-list-item"><a>文法</a></li>
-      <li class="nav-list-item"><a>例文</a></li>
-      <li class="nav-list-item"><a>辞書</a></li>
-    </ul>
+  <header id="header">
+    <script type="text/javascript">header('../../../');</script>
   </header>
   <main>
     <h2>ネサルゼルデ語</h2>
