--- a/conlang/index.html
+++ b/conlang/index.html
@@ -13,6 +13,47 @@
   </header>
   <main>
     <h2>人工言語</h2>
+    <h3>現行の人工言語</h3>
+    <h4>ネサルゼルデ語</h4>
+    <p class="indent">2020年11月より制作中の人工言語。詳細は個別記事<a href="nefhalzerde/index.html">ネサルゼルデ語</a>を参照。</p>
+    <h3>過去の人工言語</h3>
+    <h4>バージョン履歴</h4>
+    <dl>
+      <dt>Alpha Version：架空言語「エルネス語」</dt>
+      <dd>2017年12月製作開始。公開したことがある言語の中で最も古いバージョンの人工言語。当初は「エルネス語」という名前を用いており、文法やコンセプトも現在と相当に異なるものだった。現在は文法がほとんど失われてしまったが、単語集は完全なものが残存している。<br>
+        <dl>
+          <dt>α1.0（2017.12～）</dt>
+          <dd><ul>
+            <li>最初に公開されたバージョンの人工言語。</li>
+            <li>音素としてp, b, m, f, v, t, d, n, r, s, z, x, j, k, g, h, y, w, a, e, i, u, o を持っていた（x, jは後部歯茎摩擦音、yとwは半母音）。流音がrしか存在しない、帯気音・放出音・破擦音が一切存在しないなど、現在と比べて非常に音素が少ないのが特徴的である。発音のしやすさを追求していたため、子音連続は語中に最大2つまでしか立たなかった。</li>
+            <li>語順はSOV-ANであり日本語に近い。</li>
+            <li>膠着語として制作されており、格変化や活用はすべて接辞で示されていた。</li>
+            <li>主格、属格、対格、処格、奪格、向格、具格、様格など非常に多くの格を有する一方、与格が存在しなかった。所有格と属格はまだ区別されておらず、共格・変格も存在しなかった。</li>
+            <li>動詞は英語と同様、動詞共通の語尾を持たなかった。時制は接頭辞で、相は接尾辞で示されていた。</li>
+            <li>sesta「川」、agufis「城」、bio「世界、世間」などの単語は現在でもそのままの形で用いられている。また、現行バージョンのネサルゼルデ語ではこれらの単語を合成語として解釈することで、新たに語根が逆成されている（例：sesta → se- + sta）。</li>
+            <li>並行してエルネス語が用いられる架空世界も創作されていた。架空世界の地形はαバージョンから大きく変化しておらず、特に主言語の話者地域は細かな地形を除いて現行バージョンとほとんど違いがない。</li>
+            <li>文法はホームページ上で公開されていたが、単語は非公開のWikiで管理していた。このWikiはある程度創作が進んだ後に公開する予定だったが、非公開のままβバージョンへ移行することとなった。</li>
+          </ul></dd>
+          <dt>α1.1</dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+          </ul></dd>
+        </dl>
+      </dd>
+    </dl>
   </main>
   <footer id="footer">
   </footer>
