--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   <main>
     <h2>このサイトについて</h2>
-    <p>このサイトは、私Nihilの作成した人工言語や架空世界を紹介しています。</p>
+    <p class="indent">このサイトは、私Nihilの作成した人工言語や架空世界を紹介しています。</p>
     <h2>人工言語</h2>
     <ul>
       <li><a href="conlang/nefhalzerde/index.html">ネサルゼルデ語</a></li>
@@ -24,7 +24,7 @@
     </ul>
     <h2>暗号</h2>
     <ul>
-      <li>漢字式暗号「素性漢字」</li>
+      <li>換字式暗号「素性漢字」</li>
     </ul>
   </main>
   <footer id="footer">
