--- a/conlang/index.html
+++ b/conlang/index.html
@@ -36,11 +36,14 @@
           </ul></dd>
           <dt>α1.1</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>複数形が廃止された。</li>
+            <li>形容詞が修飾する名詞と一致するようになった。</li>
           </ul></dd>
-          <dt></dt>
+          <dt>α1.2</dt>
           <dd><ul>
+            <li>古語語根が導入された。</li>
+            <li>現在の単語に古典期の発音を設定し、そこから音韻変化して現在の単語が生まれたという設定が追加された。</li>
+            <li></li>
             <li></li>
           </ul></dd>
           <dt></dt>
