--- a/conlang/index.html
+++ b/conlang/index.html
@@ -20,7 +20,7 @@
     <h4>バージョン履歴</h4>
     <dl>
       <dt>Alpha Version：架空言語「エルネス語」</dt>
-      <dd>2017年12月製作開始。公開したことがある言語の中で最も古いバージョンの人工言語。当初は「エルネス語」という名前を用いており、文法やコンセプトも現在と相当に異なるものだった。現在は文法がほとんど失われてしまったが、単語集は完全なものが残存している。<br>
+      <dd>2017年12月製作開始。公開したことがある言語の中で最も古いバージョンの人工言語。当初は「エルネス語」という名前を用いており、文法やコンセプトも現在と相当に異なるものだった。現在は文法がほとんど失われてしまったが、単語集は完全なものが残存している。
         <dl>
           <dt>α1.0（2017.12～）</dt>
           <dd><ul>
@@ -43,15 +43,272 @@
           <dd><ul>
             <li>古語語根が導入された。</li>
             <li>現在の単語に古典期の発音を設定し、そこから音韻変化して現在の単語が生まれたという設定が追加された。</li>
+          </ul></dd>
+        </dl>
+      </dd>
+      <dt>Beta Version：架空語族「Yevi語族」（2018.7.10～）</dt>
+      <dd>
+        αバージョンから単語・文法を一新して制作された。エルネス語の祖語として新たに「Yevi語」を設定し、そこから原エルネス語、および古典エルネス語が派生するとした。単語のみでほとんど文法が制定されないまま次バージョンへ移行した。辞書と一部の文法記録が残存しており、このバージョンの動詞の活用法は現行のスドニガーサ語へ引き継がれた。
+        <dl>
+          <dt>β1.0.0</dt>
+          <dd><ul>
+            <li>エルネス語の設定を一旦破棄し、エルネス語の祖語であるYevi祖語の制作を開始した。</li>
+            <li>Yevi祖語の語根はαバージョンのエルネス語から多くの単語が取り入れられたが、全く同じ形ではなく、α単語の音韻変化前の形を想定したやや複雑な音形が採用された。</li>
+            <li>αから音素として新たにl, ch, gh, ú（それぞれ/l/, /dz/, /ɣ/, /ɯ/）が追加され、名詞の格として新たに共格が追加された。</li>
+            <li>時制接頭辞は廃止され、接中辞・接尾辞で示されるようになった。</li>
+          </ul></dd>
+          <dt>β1.1.0（2018.8.30～）</dt>
+          <dd><ul>
+            <li>Yevi祖語の娘言語として「原Erunes語」「古Ratr語」の2種類を想定し、前者の制作が開始された。</li>
+          </ul></dd>
+          <dt>β1.1.0</dt>
+          <dd><ul>
+            <li>「Bionaxuris（ビオナシュリス）語」「Zudnisesta（ズニセスタ）語」の制作を開始した。</li>
+            <li></li>原Erunes語と上記2言語が混合した言語「古典Erunes語」の制作も開始した。古典エルネス語が3言語の混合言語であるという設定は現在にも引き継がれており、現行の古典エルネス語の借用元言語である「ビェンジェ語」「スドニガーサ語」は、それぞれBionaxuris語とZudnisesta語に相当する。</li>
+          </ul></dd>
+          <dt>β1.1.1</dt>
+          <dd><ul>
+            <li>言語名称を変更した（Bionaxuris語→Binajles（ビナジュレス）語　Zudnisesta語→Neglages（ネグラゲス）語）。</li>
+          </ul></dd>
+          <dt>β2.0.0</dt>
+          <dd><ul>
+            <li>古典Erunes語以外の全ての言語を廃止し、古典Erunes語のみ制作するという方針に切り替えた。同時に混合言語という設定も廃止された。</li>
+          </ul></dd>
+          <dt>β2.1.0</dt>
+          <dd><ul>
+            <li>感情動詞が導入された。</li>
+          </ul></dd>
+          <dt>β3.0.0（古典イェルネス語）</dt>
+          <dd><ul>
+            <li>言語名称が古典イェルネス語（Yerunes）に変更された。与格受動態が導入されたが、現行バージョンでは廃止されている。</li>
+          </ul></dd>
+          <dt>β3.1.0</dt>
+          <dd><ul>
+            <li>名詞クラスが導入された。ただし人間・有生・有形・無形の4種類（＝現 成体・成体・不活動成体・不可視体）しか存在せず、幼体・老体の区別はまだ存在しなかった。</li>
+            <li>強勢・弱勢による音変化が導入された。</li>
+          </ul></dd>
+          <dt>β4.0.0（古典エルナ語）</dt>
+          <dd><ul>
+            <li>言語名称が古典エルナ語（Erna）へ変更された。この名称は現行の古典エルネス語話者である「エルナ人」という名称へ引き継がれている。</li>
+          </ul></dd>
+          <dt>β4.0.1</dt>
+          <dd><ul>
+            <li>名詞の母音縮化体系が導入された。この語形変化は現行バージョンにも共性曲用の特殊変化である「母音縮約」として引き継がれている（moidi「雲」の縮約形が"medi-"になるのは、この当時の音変化体系を参照しているため）。</li>
+          </ul></dd>
+          <dt>β4.1.0</dt>
+          <dd><ul>
+            <li>不定数が導入された（参照：バスク語）。</li>
+          </ul></dd>
+          <dt>β4.1.1</dt>
+          <dd><ul>
+            <li>方向接辞が導入された（参照：西夏語）。</li>
+          </ul></dd>
+          <dt>β4.2.0</dt>
+          <dd><ul>
+            <li>動詞の人称・数変化が導入された。当時は3人称を人間・動物・その他で区別していたが、この設定は破棄され、名詞クラスによる変化が代わりに導入された。</li>
+          </ul></dd>
+        </dl>
+      </dd>
+      <dt>RC Version：架空言語「古典エルネス語」</dt>
+      <dd>
+        徐々に屈折語的性格を帯びていたエルネス語を改め、正式に屈折語として制作されたエルネス語である。
+        <dl>
+          <dt>RC1</dt>
+          <dd><ul>
+            <li>2020.4～</li>
+            <li>新語根による制作が開始された。</li>
+            <li>名詞クラスとして新たに「不朽体」が導入された。これは「永体」に名を変えて現在まで引き継がれている。</li>
+            <li>通常の格に加え、格の意味を拡張する「格後倚辞」が導入された。これが現在でも「拡張格」として残存しているが、当時は1つの接尾辞が複数の格に付いていた。また、格後倚辞に導入に合わせて「静格」「動格」なる格が導入されたが、こちらは現在廃止されている。</li>
+            <li>コピュラにはno (通常のコピュラ), afto (一時的な状態を示す), mālo (永続的な状態を示す) の3種類が存在した。このような区別方法は現在、形容詞の恒常・瞬間・永続形として引き継がれている（動詞そのものによる区別は消滅）。</li>
+            <li>命令、義務、禁止などを全て包括した「規範法」はこのバージョンから用いられ、現在まで引き継がれている。</li>
+          </ul></dd>
+          <dt>RC2</dt>
+          <dd><ul>
+            <li>2020.4.16～</li>
+            <li>時制・相体系が大幅に変更された。かつては時制・相のほとんどを語尾が示していたが、RC1以降は「現在語幹・過去語幹・未来語幹」と「現在語尾・非現在語尾」の組み合わせで時相を示すようになった。この手法は現在も「主語尾・副語尾」に引き継がれている。</li>
+          </ul></dd>
+          <dt>RC3</dt>
+          <dd><ul>
+            <li>2020.4.25～</li>
+            <li>証拠性が導入された。分数表現に倍数詞が用いられるようになった。</li>
+          </ul></dd>
+          <dt>RC4</dt>
+          <dd><ul>
+            <li>2020.5.18～</li>
+            <li>祖語からの音韻変化論が再び導入された。静格、動格は廃止され、α時代の格が復活した。</li>
+          </ul></dd>
+          <dt>RC5</dt>
+          <dd><ul>
+            <li>2020.7.8～</li>
+            <li>動詞活用が全て見直された。成体に男性・女性形が新たに導入された。</li>
+          </ul></dd>
+          <dt>RC6</dt>
+          <dd><ul>
+            <li>2020.8.4～</li>
+            <li>語根体系、動詞活用が見直された。</li>
+          </ul></dd>
+        </dl>
+      </dd>
+      <dt>NewRC Version：架空言語「古典エルネス語」</dt>
+      <dd>
+        RC版から文法を大幅に変更し、より複雑な屈折語となった。
+        <dl>
+          <dt>NewRC</dt>
+          <dd><ul>
+            <li>2020.8.13～</li>
+            <li>半母音・母音変化体系が導入された。この設定は後にネサルゼルデ語の根幹の設定である「品詞転換」に活かされた。</li>
+          </ul></dd>
+          <dt>NewRC2</dt>
+          <dd><ul>
+            <li>2020.8.30～</li>
+            <li>語幹体系が詳細に定められた。過去語幹の-ig-や未来語幹の-r-などは現在まで続けて用いられている。</li>
+            <li>CVCV語根が導入されたが、この設定は後のバージョンに引き継がれなかった。</li>
+          </ul></dd>
+        </dl>
+      </dd>
+      <dt>Release Version 0.X：架空言語「ネサルゼルデ語」</dt>
+      <dd>
+        作者名義と言語名を変更し、文法の複雑さを追い求める新たな言語として制作された。当時は最初から架空世界で使用される言語として制作されており、ネサルゼルデ語の祖語である「ネサルゼルデ祖語」が並行して制作された。
+        <dl>
+          <dt>0.1.0</dt>
+          <dd><ul>
+            <li>ネサルゼルデ祖語の制作開始。</li>
+            <li>語根は子音2つで構成し、間に挿入する母音や半母音、接頭辞や接尾辞によって意味を派生していく方式が取られた。そのため、歴代バージョンの語彙のほとんどが一新され、全く別言語と呼べる体系が生まれた。</li>
+          </ul></dd>
+          <dt>0.1.1</dt>
+          <dd><ul>
+            <li>名詞クラスが増加した。</li>
+            <li></li>
+          </ul></dd>
+          <dt>0.2.0</dt>
+          <dd><ul>
+            <li>法が増加した。</li>
+            <li>時制体系が見直された。</li>
+          </ul></dd>
+          <dt>0.3.0</dt>
+          <dd><ul>
+            <li>ネサルゼルデ語にてwh, wが導入された。</li>
+            <li>ネサルゼルデ語の母音体系と祖語からの音韻変化が詳細に定められ、17母音体系が成立した。</li>
+          </ul></dd>
+          <dt>0.3.1</dt>
+          <dd><ul>
+            <li>ネサルゼルデ語の動詞の活用形が見直された。</li>
+            <li>ネサルゼルデ語の法体系が整理し直された。</li>
+          </ul></dd>
+          <dt>0.4.0</dt>
+          <dd><ul>
+            <li>子音交替の体系が見直された。</li>
+            <li>wh, wが廃止され、新たにrh, lh（r, lの無声子音）が導入された。</li>
+          </ul></dd>
+          <dt>0.5.0</dt>
+          <dd><ul>
+            <li>ネサルゼルデ語にて準動詞・準形容詞が導入された。</li>
+          </ul></dd>
+          <dt>0.5.1</dt>
+          <dd><ul>
+            <li>文法項目の細かな変更が行われた。</li>
+          </ul></dd>
+          <dt>0.6.0</dt>
+          <dd><ul>
+            <li>ネサルゼルデ語にて準動詞・形容詞にも法が導入された。</li>
+          </ul></dd>
+        </dl>
+      </dd>
+      <dt>Release Version 1.X：架空言語「ネサルゼルデ語」</dt>
+      <dd>
+        祖語の制作を終了し、ネサルゼルデ語の制作に専念するようになった。このバージョンより音素が格段に増えたことから、転写方法に多種のダイアクリティカルマークが用いられるようになり、それと並行して転写文字をASCIIに限った「簡易式転写法」、およびZpDicの統計のために全ての字母を1文字で転写できるようにした可読性の低い「辞書式転写法」が定められた。
+        <dl>
+          <dt>1.0.0</dt>
+          <dd><ul>
+            <li>基礎語彙の音韻が一部見直された。</li>
+            <li>法と時制語幹が見直された。</li>
+          </ul></dd>
+          <dt>1.1.0</dt>
+          <dd><ul>
+            <li>法と時制語幹が見直された。</li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
             <li></li>
             <li></li>
           </ul></dd>
           <dt></dt>
           <dd><ul>
             <li></li>
+            <li></li>
           </ul></dd>
           <dt></dt>
           <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+        </dl>
+      </dd>
+      <dt></dt>
+      <dd>
+        
+      </dd>
+      <dt></dt>
+      <dd>
+        <dl>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
+            <li></li>
+          </ul></dd>
+          <dt></dt>
+          <dd><ul>
+            <li></li>
             <li></li>
           </ul></dd>
         </dl>
