--- a/conlang/index.html
+++ b/conlang/index.html
@@ -227,50 +227,187 @@
           <dd><ul>
             <li>法と時制語幹が見直された。</li>
           </ul></dd>
-          <dt></dt>
+          <dt>1.2.0</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>2021.5.9～</li>
+            <li>転写方式が変更された。</li>
+            <li>基礎語彙の音韻変化法則が見直された（ç→š等）。</li>
+          </ul></dd>
+          <dt>1.3.0</dt>
+          <dd><ul>
+            <li>2021.5.22～</li>
+            <li>格変化が見直された。</li>
+            <li>形容詞限定用法（現：連体用法）の活用が整理された。</li>
+          </ul></dd>
+          <dt>1.3.1</dt>
+          <dd><ul>
+            <li>2021.8.22～</li>
+            <li>祖語の基礎語彙の音韻が見直された（rVs→bVs等）。</li>
           </ul></dd>
           <dt></dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>2021.9.1～</li>
+            <li>ネサルゼルデ語にて子音nhが導入された。</li>
+            <li>ngの語頭・語中の振る舞いが変更された（語頭・語中不可）</li>
           </ul></dd>
-          <dt></dt>
+          <dt>1.4.0</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>2021.10.5～</li>
+            <li>形容詞語尾-irが-inhへ変更された。子音rの出現割合が多すぎるために行われた変更だったが、Ver3になって再び-irに変更された。</li>
+            <li>形容詞限定用法が変更された。</li>
           </ul></dd>
-          <dt></dt>
+          <dt>1.4.1</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>2021.10.17～</li>
+            <li>規範語尾（当初の名称は規律語尾）が変更された。拡張格として依格が追加された</li>
           </ul></dd>
-          <dt></dt>
+          <dt>1.4.2</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>2021.10.28～</li>
+            <li>不定冠詞が削除され、定冠詞のみとなった。</li>
           </ul></dd>
-          <dt></dt>
+        </dl>
+      </dd>
+      <dt>Release Version 2.X：架空言語「ネサルゼルデ語」</dt>
+      <dd>
+        1.Xバージョンの言語変化の規則にあまりにも不自然な点が多数見つかり、祖語の文法に不完全な部分が多かったことから、新たに1から祖語の文法を見直すこととなった。しかし、多忙により祖語からの制作が困難になったことから、すぐに次バージョンへ以降することとなった。
+        <dl>
+          <dt>2.0.0</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>祖語の大幅な変更が行われた。</li>
           </ul></dd>
-          <dt></dt>
+          <dt>2.1</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>法・証拠性体系が見直された。</li>
           </ul></dd>
-          <dt></dt>
+        </dd>
+      </dd>
+      <dt>Release Version 3.X：人工言語「ネサルゼルデ語」</dt>
+      <dd>
+        祖語からの言語変化を設定することが困難と判断し、祖語の存在しない「人工的な言語」として新たにネサルゼルデ語の制作を開始した。架空世界は一旦廃止され、明確な使途を定めない人工言語として制作を開始した。sesta「川」やwexhet「山」など、バージョンαからの伝統的な語彙が復活した。
+        <dl>
+          <dt>3.0.0</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>祖語が廃止され、ネサルゼルデ語が祖語となった。</li>
+            <li>過去の制作言語からの借用を含む造語が採用された。</li>
+            <dd><ul>
+              <li>α語彙の例：ardu「月」、sesta「川」、wexhet「山」</li>
+              <li>β語彙の例：badu「男性」、psēl「舌」、smīka「魚」、sreita「葉」</li>
+              <li>RC語彙の例：ado「線」、avan「神」、kistem「父」、xārū「集める」</li>
+            </ul></dd>
           </ul></dd>
-          <dt></dt>
+          <dt>3.0.1</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>2022.2.27～</li>
+            <li>名詞クラスとして神体が導入され、動詞の活用に瞬間・永続語幹が導入された。</li>
+            <li>評価法が廃止された。</li>
+          </ul></dd>
+          <dt>3.1.0</dt>
+          <dd><ul>
+            <li>2022.6.23～</li>
+            <li>基礎文法が王幅に改訂された。/li>
+            <li>文法書の制作が開始された。</li>
+          </ul></dd>
+          <dt>3.1.1</dt>
+          <dd><ul>
+            <li>2022.6.25～</li>
+            <li>拡張格として新たに評格が追加された。</li>
+          </ul></dd>
+          <dt>3.1.2</dt>
+          <dd><ul>
+            <li>2022.7.8～</li>
+            <li>形容詞の級として新たに同等級が追加され、動詞形態として新たに子音型動詞が追加された。子音型動詞は現在では廃止されている。</li>
+          </ul></dd>
+          <dt>3.1.3</dt>
+          <dd><ul>
+            <li>2022.7.14～</li>
+            <li>文法項目として新たに連動詞が追加された。</li>
+          </ul></dd>
+          <dt>3.1.4</dt>
+          <dd><ul>
+            <li>2022.7.16～</li>
+            <li>動詞の証拠性として報告性・評価性が追加された。</li>
+          </ul></dd>
+          <dt>3.1.5</dt>
+          <dd><ul>
+            <li>2022.8.1～</li>
+            <li>形容詞の級として新たに過級が追加された。</li>
+            <li>このバージョンより文法をGoogleドライブに公開するようになった。</li>
+          </ul></dd>
+          <dt>3.1.6</dt>
+          <dd><ul>
+            <li>2022.8.4～</li>
+            <li>辞書式転写が一部変更された（q→č、ʤ→ǯ）。</li>
+          </ul></dd>
+          <dt>3.2.0</dt>
+          <dd><ul>
+            <li>2022.8.22～</li>
+            <li>名詞格の新形態として、新たに連用格・前置詞が追加された。</li>
+            <li>格変化規則が大幅に変更された（番号の変更・-as型の追加）</li>
+            <li>未然語尾・完了語尾が大幅に変更された。</li>
+            <li>動名詞・動形容詞変化形が変更された（-aþ, -um, -ir特殊形の廃止）。</li>
+          </ul></dd>
+          <dt>3.2.1（※非公開）</dt>
+          <dd><ul>
+            <li>2022.8.25～</li>
+            <li>第八曲用-ul型（現：成不型-ul型）が追加された。</li>
+            <li>形容詞の級として相対最上級・絶対最上級が追加された。</li>
+            <li>形容詞の語幹形成が一部変更された。</li>
+          </ul></dd>
+          <dt>3.2.2</dt>
+          <dd><ul>
+            <li>2022.9.30～</li>
+            <li>叙法詞が追加された。</li>
+            <li>動名詞トコ型が追加された。</li>
+            <li>一部文法内容の名称が変更された（推測性→推告性）。</li>
+            <li>一部の人称代名詞が変更された。</li>
+          </ul></dd>
+          <dt>3.3.0</dt>
+          <dd><ul>
+            <li>2022.11.2～</li>
+            <li>音素として新たに破擦音の帯気音・放出音が追加された。</li>
+            <li>慣用式・簡略式転写が大幅に変更された。</li>
+          </ul></dd>
+          <dt>3.4.0</dt>
+          <dd><ul>
+            <li>2022.11.17～</li>
+            <li>代名詞が改定された。</li>
+            <li>不詳接辞が追加された。</li>
+            <li>このバージョンより文法をMirahezeサイトで公開するようになった（現在は更新停止中）。</li>
+          </ul></dd>
+          <dt>3.4.1</dt>
+          <dd><ul>
+            <li>2023.1.16～</li>
+            <li>綴字・転写法が改定され、辞書式転写法が廃止された。</li>
+            <li>一部単語の音韻が変更された。</li>
+            <li>形容詞の文法が変更された（持続性による意味変化・時制が第Ⅶ類と同様の時制から4種類時制へ変更）。</li>
+          </ul></dd>
+          <dt>2023.2.27～</dt>
+          <dd><ul>
+            <li>2023.2.27～</li>
+            <li>形容詞の連体用法が変更され、より複雑化した。</li>
+            <li>2023.3.27～：口語ネサルゼルデ語制作開始</li>
+            <li>2023.4.2～：東口語ネサルゼルデ語制作開始</li>
+            <li>2023.4.5～：古典エルネス語製作開始</li>
+          </ul></dd>
+          <dt>3.4.3</dt>
+          <dd><ul>
+            <li>2023.5.5～</li>
+            <li>名詞に子音型の不規則変化（融合型・語幹の母音消失・語幹の長子音化）が追加された。</li>
+            <li>dal「10」が不規則変化になった。</li>
+            <li>2023.6.3～：スドニガーサ語製作開始</li>
+            <li>2023.7.17～：古代ラトロー語製作開始</li>
+          </ul></dd>
+          <dt>3.4.4</dt>
+          <dd><ul>
+            <li>2023.8.11～</li>
+            <li>名詞の曲用規則が一部変更された。</li>
+            <dd><ul>
+              <li>第二曲用（現：汎クラス人間型成体）および人称代名詞に処格・奪格・向格が追加された。</li>
+              <li>第四曲用（現：幼体・老体形）の処格・奪格・向格の双数・複数形が変更された。</li>
+              <li>第七曲用（現：地点局用）複数向格が変更された。</li>
+              <li>拡張格の形成法が一部修正された。</li>
+            </ul></dd>
           </ul></dd>
           <dt></dt>
           <dd><ul>
@@ -294,22 +431,27 @@
           </ul></dd>
         </dl>
       </dd>
-      <dt></dt>
+      <dt>Release Version 4.X：人工言語「ネサルゼルデ語」</dt>
       <dd>
-        
-      </dd>
-      <dt></dt>
-      <dd>
+        Ver3から更なる複雑化を目指し、これまで自身が作成した人工言語の文法事項のほぼ全てが盛り込まれた。
         <dl>
-          <dt></dt>
+          <dt>4.0.0</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>有声有気音、唇歯歯擦音、両唇硬口蓋接近音が追加され、子音数が大幅に増加した。また母音も調音位置を4段区別するようになり、大幅に増加した。</li>
+            <li>文字体系が大きく見直され、ニ文字で一音を表す音素が大幅に増加した。それに伴い、音素数が大幅に増加したにもかかわらず文字数は減少した。</li>
+            <li>名詞クラスとして新たに亜成体・熟体が追加された。また、サブクラスの概念が新たに導入され、成体・亜成体・熟体はそれぞれ両性・男性・女性を、不活動成体は両性。熱性・冷性を区別するようになった。</li>
+            <li>名詞の曲用体系が見直され、番号による曲用形の分類は廃止された。品詞転換を行わない借用語彙局用が新たに導入された。</li>
+            <li>動詞の活用がサブクラスを区別するようになり、活用語尾の種類が大幅に増加した。</li>
+            <li>冠詞ほか限定詞が名詞の4格・サブクラスを区別するようになり、変化形が大幅に増加した。</li>
+            <li>数詞の体系がすべて見直され、10万未満がすべて1語で表現されるようになった。</li>
           </ul></dd>
-          <dt></dt>
+          <dt>4.0.1</dt>
           <dd><ul>
-            <li></li>
-            <li></li>
+            <li>2024.4.13～</li>
+            <li>借用語彙子音型・共性曲用子音型・絶対単数曲用子音型のeで終わる名詞の属格が-eから-aに変更された。これは子音で終わる場合とeで終わる場合で属格の形容詞変化が異なっていたのを修正するためである。</li>
+            <li>動形容詞連体形主語尾が子音で終われるようになった。動副詞では子音で終わることが出来ていたのに動形容詞が出来ないのは整合性が取れないためである。</li>
+            <li>動詞・形容詞接続形が「定動詞接続」と「準動詞接続」を区別するようになった。</li>
+            <li>動詞規範法と形容詞の証拠性の形成法が明確された。動詞規範法と形容詞の形名用法で証拠性を表現するため、新たに証拠性接尾辞が追加された。</li>
           </ul></dd>
         </dl>
       </dd>
