--- a/cipher/index.html
+++ b/cipher/index.html
@@ -15,6 +15,7 @@
     <h2>暗号</h2>
   </main>
   <footer id="footer">
+    <script type="text/javascript">footer('../../');</script>
   </footer>
 </body>
 </html>
