--- a/conlang/index.html
+++ b/conlang/index.html
@@ -438,6 +438,7 @@
     </dl>
   </main>
   <footer id="footer">
+    <script type="text/javascript">footer('../../');</script>
   </footer>
 </body>
 </html>
