--- a/conlang/nefhalzerde/index.html
+++ b/conlang/nefhalzerde/index.html
@@ -15,9 +15,12 @@
     <h2>ネサルゼルデ語</h2>
     <p>2020年11月から制作中の人工言語。難解な言語を目指して制作されており、非常に煩雑な語形変化を有することを特徴としている。</p>
     <h2>文法</h2>
-    <h2>バージョン</h2>
+    <p><a href="https://drive.google.com/file/d/1m_9GrAuahcxPaF3_lQLOl9JbN4D4ug8X/view?usp=sharing">ネサルゼルデ語文法書（PDF）</a>を参照のこと。</p>
+    <h2>辞書</h2>
+    <p><a href="https://zpdic.ziphil.com/dictionary/nefhalzerde">ネサルゼルデ語辞書（ZpDic）</a>を参照のこと。</p>
   </main>
   <footer>
+    <script type="text/javascript">footer('../../../');</script>
   </footer>
 </body>
 </html>
