--- a/contact/index.html
+++ b/contact/index.html
@@ -20,6 +20,7 @@
     </ul>
   </main>
   <footer id="footer">
+    <script type="text/javascript">footer('../../');</script>
   </footer>
 </body>
 </html>
