--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </ul>
   </main>
   <footer id="footer">
+    <script type="text/javascript">footer('../');</script>
   </footer>
 </body>
 </html>
