--- a/conworld/index.html
+++ b/conworld/index.html
@@ -15,6 +15,7 @@
     <h2>架空世界コルサレス</h2>
   </main>
   <footer id="footer">
+    <script type="text/javascript">footer('../../');</script>
   </footer>
 </body>
 </html>
