--- a/conworld/index.html
+++ b/conworld/index.html
@@ -13,6 +13,7 @@
   </header>
   <main>
     <h2>架空世界コルサレス</h2>
+    <p class="indent"></p>
   </main>
   <footer id="footer">
     <script type="text/javascript">footer('../../');</script>
