--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <h1 class="headline">Colþales Þifiles</h1>
 <ul class="nav-list">
-  <li class="nav-list-item"><a href="{$root}index.html">ホーム</a></li>
-  <li class="nav-list-item"><a href="{$root}conlang/index.html">人工言語</a></li>
-  <li class="nav-list-item"><a href="{$root}conworld/index.html">架空世界</a></li>
-  <li class="nav-list-item"><a href="{$root}cipher/index.html">暗号</a></li>
-  <li class="nav-list-item"><a href="{$root}contact/index.html">お問い合わせ</a></li>
+  <li class="nav-list-item"><a href="{$root}">ホーム</a></li>
+  <li class="nav-list-item"><a href="{$root}conlang">人工言語</a></li>
+  <li class="nav-list-item"><a href="{$root}conworld">架空世界</a></li>
+  <li class="nav-list-item"><a href="{$root}cipher">暗号</a></li>
+  <li class="nav-list-item"><a href="{$root}contact">お問い合わせ</a></li>
 </ul>
