--- a/conworld/index.html
+++ b/conworld/index.html
@@ -13,7 +13,9 @@
   </header>
   <main>
     <h2>架空世界コルサレス</h2>
-    <p class="indent"></p>
+    <p class="indent">自作の言語が使用される世界として創作が始まった。過去別個に創作していた架空地図の要素が多分に盛り込まれている。</p>
+    <h3>創作理念</h3>
+    
   </main>
   <footer id="footer">
     <script type="text/javascript">footer('../../');</script>
