--- a/conlang/index.html
+++ b/conlang/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../style.css">
-  <title>人工言語 - COLÞALES ÞIHILES</title>
+  <title>人工言語 - KOLÞĀLES ÞIÇILES</title>
   <script type="text/javascript" src="../main.js"></script>
   <script type="text/javascript" src="../jquery.js"></script>
 </head>
@@ -17,6 +17,31 @@
     <h4>ネサルゼルデ語</h4>
     <p class="indent">2020年11月より制作中の人工言語。詳細は個別記事<a href="nefhalzerde/index.html">ネサルゼルデ語</a>を参照。</p>
     <h3>過去の人工言語</h3>
+    <p class="indent">過去様々な言語を創作しており、それらの設定の多くはネサルゼルデ語に引き継がれている。</p>
+    <dl>
+      <dt>初期文字言語（言語名なし）</dt>
+      <dd>最初期に創作した人工言語。紙上で創作しており、音素をもたない純粋な文字（表意文字）だけの言語として創作していた。現在は創作に残したノートの一部が残存している（<a href="https://twitter.com/Nihil_2000/status/1562641162476724224/photo/1">参考</a>）。</dd>
+      <dt>初期音声言語</dt>
+      <dd>音声言語として創作された初期の人工言語。TextDropを使用して創作しており、いくつかの単語や文法事項の記録が残っている。</dd>
+      <dt>エルネス語</dt>
+      <dd>最初にインターネット上に公開した人工言語。JimdoやGoogleサイト上に公開していたが、現在では削除している。膠着語な上、文法も日本語と英語に見られる項目を思い思いに組み合わせただけの粗末な言語だったが、1000語近い造語や古語の作成など、これまで創作した人工言語には見られない進化を遂げていた。</dd>
+      <dt>サリカ語</dt>
+      <dd>エルネス語に次ぐ第二の言語として創作された。エルネス語にない特徴を得ようと、開音節の屈折語として創作していたが、思うように創作が進まなかったためエルネス語の大改造（β）期に放棄された。東南アジアの文字に似たアブギダも創作しており、現在では文字のみが記録に残されている。</dd>
+      <dt>フェン語</dt>
+      <dd>エルネス語・サリカ語に次ぐ第三の言語として創作された。こちらもエルネス語・サリカ語にない特徴を得ようと、右から左に書く表語文字体系を持つ孤立語として創作された。文字自体は非常に気に入っていたが、表語文字であるが故に創作コストが非常に高く、こちらもサリカ語放棄と同時期に放棄された。</dd>
+      <dt>機械話語</dt>
+      <dd>スター・ウォーズのR2-D2が話すような言語を創作しようと、機械が出す音の高さや音色だけで表現する人工言語として創作された。こちらは架空世界における、機械人の住む地域で話される言語として創作されたものだったが、飽きて放棄された。</dd>
+      <dt>イェヴィ語</dt>
+      <dd>エルネス語のβ大改造に伴い、エルネス語の古語として創作された。当時印欧祖語やシナ・チベット祖語を学んでいたこともあり、「古代語は複雑な音韻構造があったのだろう」とうイメージでやたら子音連結の多い言語として創作された。</dd>
+      <dt>ビオナシュリス語・ズニセスタ語（ネグラゲス語）</dt>
+      <dd>イェヴィ語→古典エルネス語への変化において、その変化に</dd>
+      <dt></dt>
+      <dd></dd>
+      <dt></dt>
+      <dd></dd>
+      <dt></dt>
+      <dd></dd>
+    </dl>
     <h4>バージョン履歴</h4>
     <dl>
       <dt>Alpha Version：架空言語「エルネス語」</dt>
