--- a/conlang/nefhalzerde/index.html
+++ b/conlang/nefhalzerde/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../../style.css">
-  <title>ネサルゼルデ語 - COLFHALES ÞIHILES</title>
+  <title>ネサルゼルデ語 - KOLÞĀLES ÞIÇILES</title>
   <script type="text/javascript" src="../../main.js"></script>
   <script type="text/javascript" src="../../jquery.js"></script>
 </head>
