--- a/conworld/index.html
+++ b/conworld/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../style.css">
-  <title>架空世界 - COLÞALES ÞIHILES</title>
+  <title>架空世界 - KOLÞĀLES ÞIÇILES</title>
   <script type="text/javascript" src="../main.js"></script>
   <script type="text/javascript" src="../jquery.js"></script>
 </head>
@@ -15,7 +15,9 @@
     <h2>架空世界コルサレス</h2>
     <p class="indent">自作の言語が使用される世界として創作が始まった。過去別個に創作していた架空地図の要素が多分に盛り込まれている。</p>
     <h3>創作理念</h3>
-    
+    <P>現在のコルサレスは<a href="../conlang/nefhalzerde/">ネサルゼルデ語</a>が使用される世界として創作されている。ネサルゼルデ語は現実世界（＝地球）、架空世界の双方で使用可能な言語として創作されているため、コルサレスも地球とよく似た異世界として創作されている。</P>
+    <p class="indent">ただし地球との大きな違いとして、コルサレスには歴史時代の最初から高度な文明が存在していた点である。これは、現代もしくは未来の地球人がコルサレスのある土地に来訪し、原住民に高度な文明を伝えたためである。</P>
+    <p class="indent">また、地球に存在する動植物のほとんどはコルサレスにも存在するが、地球には存在しない生命体も数多く存在する。地球・架空世界双方で使用可能な言語を目指していることから、地球上で語られている架空の生物の多くも、コルサレスには実在する動物として存在している。</P>
   </main>
   <footer id="footer">
     <script type="text/javascript">footer('../../');</script>
