--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<h1 class="headline">Colþales Þifiles</h1>
+<h1 class="headline">Kolþāles Þiçiles</h1>
 <ul class="nav-list">
   <li class="nav-list-item"><a href="{$root}">ホーム</a></li>
   <li class="nav-list-item"><a href="{$root}conlang">人工言語</a></li>
