--- a/cipher/index.html
+++ b/cipher/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../style.css">
-  <title>暗号 - COLÞALES ÞIHILES</title>
+  <title>暗号 - KOLÞĀLES ÞIÇILES</title>
   <script type="text/javascript" src="../main.js"></script>
   <script type="text/javascript" src="../jquery.js"></script>
 </head>
