--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>COLÞALES ÞIHILES</title>
+  <title>KOLÞĀLES ÞIÇILES</title>
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="jquery.js"></script>
 </head>
