--- a/conlang/index.html
+++ b/conlang/index.html
@@ -34,13 +34,7 @@
       <dt>イェヴィ語</dt>
       <dd>エルネス語のβ大改造に伴い、エルネス語の古語として創作された。当時印欧祖語やシナ・チベット祖語を学んでいたこともあり、「古代語は複雑な音韻構造があったのだろう」とうイメージでやたら子音連結の多い言語として創作された。</dd>
       <dt>ビオナシュリス語・ズニセスタ語（ネグラゲス語）</dt>
-      <dd>イェヴィ語→古典エルネス語への変化において、その変化に</dd>
-      <dt></dt>
-      <dd></dd>
-      <dt></dt>
-      <dd></dd>
-      <dt></dt>
-      <dd></dd>
+      <dd>イェヴィ語→古典エルネス語へ変化する仮定で、外来の言語を取り込んで混合言語化したいう設定が盛り込まれたが故、その混合元の言語として創作された言語群。ともに語根から文法まで創作しており、傍流創作品にしては作り込んでいた。</dd>
     </dl>
     <h4>バージョン履歴</h4>
     <dl>
