--- a/conlang/index.html
+++ b/conlang/index.html
@@ -20,7 +20,7 @@
     <p class="indent">過去様々な言語を創作しており、それらの設定の多くはネサルゼルデ語に引き継がれている。</p>
     <dl>
       <dt>初期文字言語（言語名なし）</dt>
-      <dd>最初期に創作した人工言語。紙上で創作しており、音素をもたない純粋な文字（表意文字）だけの言語として創作していた。現在は創作に残したノートの一部が残存している（<a href="https://twitter.com/Nihil_2000/status/1562641162476724224/photo/1">参考</a>）。</dd>
+      <dd>最初期に創作した人工言語。紙上で創作しており、音素をもたない純粋な文字（表意文字）だけの言語として創作していた。現在は創作に残したノートの一部が残存している（<a href="https://twitter.com/Nihil_2000/status/1562641162476724224/photo/1" target="_blank">参考</a>）。</dd>
       <dt>初期音声言語</dt>
       <dd>音声言語として創作された初期の人工言語。TextDropを使用して創作しており、いくつかの単語や文法事項の記録が残っている。</dd>
       <dt>エルネス語</dt>
