--- a/contact/index.html
+++ b/contact/index.html
@@ -14,9 +14,9 @@
   <main>
     <h2>お問い合わせ</h2>
     <ul>
-      <li><a href="https://twitter.com/Nihil_2000">X（旧Twitter）</a></li>
-      <li><a href="https://misskey.io/@nihil2000">Misskey</a></li>
-      <li><a href="https://mstdn.jp/@nihil_2000">Mastodon</a></li>
+      <li><a href="https://twitter.com/Nihil_2000" target="_blank">X（旧Twitter）</a></li>
+      <li><a href="https://misskey.io/@nihil2000" target="_blank">Misskey</a></li>
+      <li><a href="https://mstdn.jp/@nihil_2000" target="_blank">Mastodon</a></li>
     </ul>
   </main>
   <footer id="footer">
