--- a/conworld/index.html
+++ b/conworld/index.html
@@ -18,6 +18,14 @@
     <P>現在のコルサレスは<a href="../conlang/nefhalzerde/">ネサルゼルデ語</a>が使用される世界として創作されている。ネサルゼルデ語は現実世界（＝地球）、架空世界の双方で使用可能な言語として創作されているため、コルサレスも地球とよく似た異世界として創作されている。</P>
     <p class="indent">ただし地球との大きな違いとして、コルサレスには歴史時代の最初から高度な文明が存在していた点である。これは、現代もしくは未来の地球人がコルサレスのある土地に来訪し、原住民に高度な文明を伝えたためである。</P>
     <p class="indent">また、地球に存在する動植物のほとんどはコルサレスにも存在するが、地球には存在しない生命体も数多く存在する。地球・架空世界双方で使用可能な言語を目指していることから、地球上で語られている架空の生物の多くも、コルサレスには実在する動物として存在している。</P>
+      <h3>創作状況</h3>
+      <h4>地形</h4>
+      <figure>
+        <img src="image/worldmap_20240414.png" alt="地形" align="right">
+        <figcaption>世界地図の創作状況（2024年4月14日現在）</figcaption>
+      </figure>
+      <p class="indent">現在は主に中央付近の大陸の創作にとどまり、その他の地域や海面下の地形</p>
+      <h4>歴史</h4>
   </main>
   <footer id="footer">
     <script type="text/javascript">footer('../../');</script>
