--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <p class="indent">このサイトは、私Nihilの作成した人工言語や架空世界を紹介しています。</p>
     <h2>人工言語</h2>
     <ul>
-      <li><a href="conlang/nefhalzerde/">ネサルゼルデ語</a></li>
+      <li><a href="conlang/nefhalzerde">ネサルゼルデ語</a></li>
       <li>古典エルネス語</li>
       <li>古典ラトロー語</li>
     </ul>
     <h2>架空世界</h2>
     <ul>
-      <li><a href="conworld/">架空世界コルサレス</a></li>
+      <li><a href="conworld">架空世界コルサレス</a></li>
     </ul>
     <h2>暗号</h2>
     <ul>
