--- a/conworld/index.html
+++ b/conworld/index.html
@@ -24,8 +24,11 @@
         <img src="image/worldmap_20240414.png" alt="地形" align="right">
         <figcaption>世界地図の創作状況（2024年4月14日現在）</figcaption>
       </figure>
-      <p class="indent">現在は主に中央付近の大陸の創作にとどまり、その他の地域や海面下の地形</p>
+      <p class="indent">現在は主に中央付近の大陸の創作にとどまり、その他の地域や海面下の地形などの創作はほとんど進んでいない。</p>
       <h4>歴史</h4>
+      <p class="indent">中央大陸、および東方大陸の一部の歴史が創作されている。いずれも地球史的な時代区分で言うところの「現代」までの創作まで大雑把に行われているが、コルサレスの人類が宇宙進出を果たす未来史まで創作する予定である。</p>
+      <h4>言語</h4>
+      <p class="indent">主に中央大陸で話される言語が創作されている。言語創作そのものの詳細は<a href="../conlang">人工言語</a>を参照のこと。</p>
   </main>
   <footer id="footer">
     <script type="text/javascript">footer('../../');</script>
