--- a/conworld/index.html
+++ b/conworld/index.html
@@ -20,8 +20,8 @@
     <p class="indent">また、地球に存在する動植物のほとんどはコルサレスにも存在するが、地球には存在しない生命体も数多く存在する。地球・架空世界双方で使用可能な言語を目指していることから、地球上で語られている架空の生物の多くも、コルサレスには実在する動物として存在している。</P>
       <h3>創作状況</h3>
       <h4>地形</h4>
-      <figure>
-        <img src="image/worldmap_20240414.png" alt="地形" align="right">
+      <figure float="right">
+        <img src="image/worldmap_20240414_light.png" alt="コルサレスの地形（未完成）">
         <figcaption>世界地図の創作状況（2024年4月14日現在）</figcaption>
       </figure>
       <p class="indent">現在は主に中央付近の大陸の創作にとどまり、その他の地域や海面下の地形などの創作はほとんど進んでいない。</p>
