--- a/conworld/geography/index.html
+++ b/conworld/geography/index.html
@@ -14,7 +14,7 @@
   <main>
     <h2>世界地図</h2>
     <figure style="text-align: center">
-      <img src="image/worldmap_20240414_light.png" alt="コルサレスの地形（未完成）">
+      <img src="../image/worldmap_20240414_light.png" alt="コルサレスの地形（未完成）">
       <figcaption>世界地図の創作状況（2024年4月14日現在）</figcaption>
     </figure>
     <h2>大陸</h2>
@@ -24,7 +24,16 @@
     <h4>地域区分</h4>
     <dl>
       <dt>ガテフィハス</dt>
-      <dd>北方を山脈、南方を海に囲まれた大陸南方の地域。メニスタ山脈・サグナル山脈に囲まれており、サナクトゥ・ラトローという2つの半島が存在する。2半島の間には、ネサルゼーデスの故地であるラン諸島が存在する。ネサルゼルデ語はネサルゼーデスの公用語であり、ネサルゼーデスの崩壊、および口語ネサルゼルデ語の分化・発展以降もこの地域の共通語としてあり続けた。</dd>
+      <dd>北方を山脈、南方を海に囲まれた大陸南方の地域。メニスタ山脈・サグナル山脈に囲まれており、サナクトゥ・ラトローという2つの半島が存在する。2半島の間には、ネサルゼーデスの故地であるラン諸島が存在する。ネサルゼルデ語はネサルゼーデスの公用語であり、ネサルゼーデスの崩壊、および口語ネサルゼルデ語の分化・発展以降もこの地域の共通語としてあり続けた。
+        <ul>
+          <li>サナクトゥ</li>
+          <li>ラトロー</li>
+          <li>メルドウェスタ</li>
+          <li>ラン諸島</li>
+          <li>バルミハス諸島</li>
+          <li>ミョルモ諸島</li>
+        </ul>
+      </dd>
       <dt>ヘイシュー</dt>
       <dd>大陸東方部。主に遊牧民が居住し、古くから遊牧国家が栄えた。たびたびサナクトゥの国家からの侵略を受けている。山岳地帯が多く全体的に寒冷だが、そのような寒さへの耐性を持つ生物が多く、生態系は以外にも豊かである。</dd>
       <dt>コリョ</dt>
