--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <main>
     <h2>このサイトについて</h2>
     <p class="indent">このサイトは、私Nihilの作成した人工言語や架空世界を紹介しています。</p>
+    <h3>サイト名</h3>
+    <p class="indent">"Kolþāles Þiçiles"とは、ネサルゼルデ語で「Nihilの世界」を意味します。</p>
     <h2>人工言語</h2>
     <ul>
       <li><a href="conlang/nefhalzerde">ネサルゼルデ語</a></li>
@@ -26,7 +28,7 @@
     </ul>
     <h2>暗号</h2>
     <ul>
-      <li>換字式暗号「素性漢字」</li>
+      <li>（未公開）</li>
     </ul>
   </main>
   <footer id="footer">
