--- a/conworld/geography/index.html
+++ b/conworld/geography/index.html
@@ -13,7 +13,7 @@
   </header>
   <main>
     <h2>世界地図</h2>
-    <figure style="text-align: center">
+    <figure class="figure_center">
       <img src="../image/worldmap_20240414_light.png" alt="コルサレスの地形（未完成）">
       <figcaption>世界地図の創作状況（2024年4月14日現在）</figcaption>
     </figure>
