--- a/conlang/nefhalzerde/index.html
+++ b/conlang/nefhalzerde/index.html
@@ -19,7 +19,7 @@
     <h2>辞書</h2>
     <p><a href="https://zpdic.ziphil.com/dictionary/nefhalzerde" target="_blank">ネサルゼルデ語辞書（ZpDic）</a>を参照のこと。</p>
   </main>
-  <footer>
+  <footer id="footer">
     <script type="text/javascript">footer('../../../');</script>
   </footer>
 </body>
