--- a/conworld/geography/index.html
+++ b/conworld/geography/index.html
@@ -50,7 +50,7 @@
     <h3>西方大陸</h3>
     <p class="indent">北半球から南半球にかけて広がる、コルサレス内で最も面積の広い大陸。</p>
   </main>
-  <footer>
+  <footer id="footer">
     <script type="text/javascript">footer('../../../');</script>
   </footer>
 </body>
