--- a/conworld/index.html
+++ b/conworld/index.html
@@ -19,7 +19,7 @@
     <p class="indent">ただし地球との大きな違いとして、コルサレスには歴史時代の最初から高度な文明が存在していた点である。これは、現代もしくは未来の地球人がコルサレスのある土地に来訪し、原住民に高度な文明を伝えたためである。</P>
     <p class="indent">また、地球に存在する動植物のほとんどはコルサレスにも存在するが、地球には存在しない生命体も数多く存在する。地球・架空世界双方で使用可能な言語を目指していることから、地球上で語られている架空の生物の多くも、コルサレスには実在する動物として存在している。</P>
       <h3>創作状況</h3>
-      <h4>地形</h4>
+      <h4>地理</h4>
       <figure class="figure_right">
         <img src="image/worldmap_20240414_light.png" alt="コルサレスの地形（未完成）">
         <figcaption>世界地図の創作状況（2024年4月14日現在）</figcaption>
@@ -28,6 +28,7 @@
       <p class="indent">→<a href="geography">地形</a></p>
       <h4>歴史</h4>
       <p class="indent">中央大陸、および東方大陸の一部の歴史が創作されている。いずれも地球史的な時代区分で言うところの「現代」までの創作まで大雑把に行われているが、コルサレスの人類が宇宙進出を果たす未来史まで創作する予定である。</p>
+      <p class="indent">→<a href="history">歴史</a></p>
       <h4>言語</h4>
       <p class="indent">主に中央大陸で話される言語が創作されている。言語創作そのものの詳細は<a href="../conlang">人工言語</a>を参照のこと。</p>
   </main>
