--- a/conworld/history/index.html
+++ b/conworld/history/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">header('../../../');</script>
   </header>
   <main>
-    <h2></h2>
+    <h2>中央大陸史</h2>
   </main>
   <footer id="footer">
     <script type="text/javascript">footer('../../../');</script>
