--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,1 @@
-<p class="copyright">Copyright ©️Niçil Rathernesja Sağavanīse</p>
+<p class="copyright">Copyright ©️2024 Niçil Rathernesja Sağavanīse</p>
